moved doc to wiki page

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/quicklisp-bootstrap"]
 	path = lib/quicklisp-bootstrap
 	url = https://github.com/quicklisp/quicklisp-bootstrap.git
+[submodule "doc"]
+	path = doc
+	url = git@github.com:cl-jabs/cl-jabs.wiki.git
