--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: lisp
 env:
   matrix:
     - LISP=sbcl
-    - LISP=ccl
+    # - LISP=ccl
 
 install:
   - sudo apt-get -y install sbcl realpath
