Changed runner from multiple projects to single

--- a/etc/jabs.conf
+++ b/etc/jabs.conf
@@ -29,7 +29,6 @@
 ;; ;; *jabs-forced-skelethon*
 ;; (*jabs-bouts-directory* "the/directory")
 ;; (*jabs-default-bout* :default)
-;; (*jabs-projects-to-run* '(:project1 :project2))
 ;; ;; *jabs-current-compiler*
 ;; ;; *jabs-current-compiler-path*
 ;; (*jabs-hits-to-run* '(:hit1 :hit2))
@@ -70,8 +69,5 @@
 ;; (*initialize-plugin-hook* nil)
 
 ;; (*jabs-hits-directory* "zzz")
-;; (*jabs-projects-to-run* '(:project1 :project2))
 
-;; (*required-asdf-version* "2.26")
-
-; (*fail-on-error* t) ;; IT WORKS!
+;; (*fail-on-error* t) ;; IT WORKS!
