Fix typo skelethon to skeleton

--- a/etc/jabs.conf
+++ b/etc/jabs.conf
@@ -1,6 +1,6 @@
 
-;; skelethons
-;; (*jabs-skelethons-directory* (make-pathname :directory '(:relative "skelethons")))
+;; skeletons
+;; (*jabs-skeletons-directory* (make-pathname :directory '(:relative "skeletons")))
 ;; bouts
 ;; (*jabs-bouts-directory* (make-pathname :directory '(:relative "bouts")))
 ;; hits
@@ -21,12 +21,12 @@
 ;; (*jabs-verbose* nil)
 ;; (*jabs-debug* nil)
 
-;; (*jabs-default-skelethon-name* :default)
+;; (*jabs-default-skeleton-name* :default)
 ;; (*jabs-default-bout* :default)
 
 ;; (*jabs-debug* t)
-;; ;; (*jabs-skelethons-directory* "the/directory")
-;; ;; *jabs-forced-skelethon*
+;; ;; (*jabs-skeletons-directory* "the/directory")
+;; ;; *jabs-forced-skeleton*
 ;; (*jabs-bouts-directory* "the/directory")
 ;; (*jabs-default-bout* :default)
 ;; ;; *jabs-current-compiler*
@@ -60,11 +60,11 @@
 ;; (*register-plugin-hook* nil)
 ;; (*register-repository-hook* nil) ;; ??
 ;; (*register-project-hook* nil)
-;; (*register-skelethon-hook* nil)
+;; (*register-skeleton-hook* nil)
 ;; (*run-project-hook* nil)
 ;; (*run-hit-hook* nil)
 ;; (*run-bout-hook* nil)
-;; (*initialize-skelethon-hook* nil)
+;; (*initialize-skeleton-hook* nil)
 ;; (*init-hook* nil) ;; run directly after initialization
 ;; (*initialize-plugin-hook* nil)
 
