11: Improve logging from CLI, perform some code cleaning

--- a/etc/jabs.conf
+++ b/etc/jabs.conf
@@ -1,12 +1,4 @@
-
-;; skeletons
-;; (*jabs-skeletons-directory* (make-pathname :directory '(:relative "skeletons")))
-;; bouts
-;; (*jabs-bouts-directory* (make-pathname :directory '(:relative "bouts")))
-;; hits
-;; (*jabs-hits-directory* (make-pathname :directory '(:relative "hits")))
-
-;; (*jabs-buildfile* (make-pathname :name "build" :type "jab"))
+(*jabs-buildfile* (make-pathname :name "build" :type "jab"))
 
 ;; (defvar *jabs-cli-parameters* (mapcar (lambda (x) (ppcre:split "=" (ppcre:regex-replace "^-D" x ""))) *argv*))
 ;; (*jabs-no-bout* nil) ; run hits without bout (dependency-based running)
@@ -16,15 +8,9 @@
 ;; (*jabs-output-log* "/home/cosmonaut/outlog")
 ;; (*jabs-error-log* "/home/cosmonaut/outerr")
 
-;; verbosity
-(*jabs-quiet* nil)
-;; (*jabs-verbose* nil)
-;; (*jabs-debug* nil)
+(*jabs-default-skeleton-name* :default)
+(*jabs-default-bout-name* :default)
 
-;; (*jabs-default-skeleton-name* :default)
-;; (*jabs-default-bout* :default)
-
-;; (*jabs-debug* t)
 ;; ;; (*jabs-skeletons-directory* "the/directory")
 ;; ;; *jabs-forced-skeleton*
 ;; (*jabs-bouts-directory* "the/directory")
@@ -47,11 +33,8 @@
 ;; (*jabs-buildfile* "build.jab")
 ;; (*jabs-no-bout* nil)
 ;; (*jabs-currenct-compiler* "sbcl")
-;; (*jabs-debug* t)
 ;; (*jabs-output-log* nil)
 ;; (*jabs-error-log* nil)
-;; (*jabs-quiet* nil)
-;; (*jabs-verbose* nil)
 ;; ;; *jabs-current-pathname*
 
 ;; (*register-source-hook* nil)
@@ -68,6 +51,4 @@
 ;; (*init-hook* nil) ;; run directly after initialization
 ;; (*initialize-plugin-hook* nil)
 
-;; (*jabs-hits-directory* "zzz")
-
-;; (*fail-on-error* t) ;; IT WORKS!
+(*fail-on-error* nil)
